# RHp_humanoid_controller

rhphumanoid_arm_controller/: CMakeLists.txt  package.xml
rhphumanoid_arm_controller/include/rhphumanoid_arm_controller/: arm_definitions.hpp
rhphumanoid_arm_controller/src/: arm_controller.cpp
rhphumanoid_head_controller/: CMakeLists.txt  package.xml
rhphumanoid_head_controller/include/rhphumanoid_head_controller/: head_definitions.hpp
rhphumanoid_head_controller/src/: head_controller.cpp
rhphumanoid_manual_controller/: CMakeLists.txt  package.xml
rhphumanoid_manual_controller/src/: humanoid_manual_node.cpp  wave_arm.py
rhphumanoid_walking/: CMakeLists.txt  README.md  package.xml
rhphumanoid_walking/config/: rhphumanoid_walking_param.yaml
rhphumanoid_walking/include/rhphumanoid_walking/: link_data.h  rhphumanoid_kinematics_dynamics.h  rhphumanoid_kinematics_dynamics_define.h  rhphumanoid_walking_module.h  rhphumanoid_walking_parameter.h
rhphumanoid_walking/launch/: walking.launch.py
rhphumanoid_walking/src/: link_data.cpp  rhphumanoid_kinematics_dynamics.cpp  rhphumanoid_walking_module.cpp  rhphumanoid_walking_node.cpp
rhphumanoid_walking_pattern/: CMakeLists.txt  package.xml
rhphumanoid_walking_pattern/include/rhphumanoid_walking_pattern/: motion_definitions.hpp
rhphumanoid_walking_pattern/src/: walking_controller.cpp
scripts/: motor_con_gui.py  motor_control_gui.py
